# drones-fw

./: .gitignore  CHANGELOG.md  Dockerfile  InRelease  MANIFEST.in  Packages  README.md  Release  Release.gpg  add.md  airframes.eolab  airframes.patch  build.sh  setup.py
.github/workflows/: build-firmwares.yml  build.yml  deploy-container.yml  release-sitl.yml  test.yml  (+2 more)
easy_px4/: __init__.py
eolab_drones/: README.md  api.py  main.py  paths.py  pyproject.toml  utils.py
eolab_drones/catalog/components/: common  common.post
eolab_drones/catalog/drones/condor/: board.modules  sitl.modules
eolab_drones/catalog/drones/pegasus/: info.toml  params.airframe  params.airframe.post
eolab_drones/catalog/drones/phoenix/: board.modules  params.airframe
eolab_drones/catalog/drones/platypus/: info.toml  params.airframe
eolab_drones/catalog/drones/protoflyer/: info.toml  params.airframe  params.airframe.post
eolab_drones/catalog/drones/sar/: info.toml  params.airframe
eolab_drones/commands/: build.py  build_all.py
eolab_drones/eolab_drones/: api.py  paths.py  type_defs.py
eolab_drones/eolab_drones/catalog/components/: common  common.post  rc_in_mode_legacy
eolab_drones/eolab_drones/catalog/drones/condor/: info.toml  params.airframe
eolab_drones/eolab_drones/catalog/drones/pegasus/: info.toml  params.airframe  params.airframe.post
eolab_drones/eolab_drones/catalog/drones/phoenix/: info.toml  params.airframe
eolab_drones/eolab_drones/catalog/drones/protoflyer/: info.toml  params.airframe
eolab_drones/eolab_drones/catalog/drones/sar/: board.modules  params.airframe
eolab_drones/tests/: test_api.py
eolab_drones_cli/: README.md  pyproject.toml
eolab_drones_cli/eolab_drones_cli/: main.py
eolab_drones_cli/eolab_drones_cli/commands/: build.py
(+17 files in other folders)
