[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eolab_drones"
version = "0.0.5"
description = "Python API for EOLab drones firmware metadata."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "easy_px4_utils",
]

[project.optional-dependencies]
cli = [
  "eolab_drones_cli==0.0.4",
]
test = [
  "pytest",
  "mypy",
]

[tool.setuptools.packages.find]
include = ["eolab_drones*"]
namespaces = false

[tool.setuptools.package-data]
eolab_drones = [
  "catalog/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
